add script to replace versions table with list

--- a/examples/tables/result/readme.html
+++ b/examples/tables/result/readme.html
@@ -72,3 +72,27 @@
 </tr>
 </tbody>
 </table>
+<h2 id="other-section">Other Section</h2>
+<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, <strong>fringilla vel</strong>, aliquet nec, vulputate eget, arcu.</p>
+<h2 id="other-table">Other Table</h2>
+<table>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Syntax</th>
+<th style="text-align: center;">Description</th>
+<th style="text-align: right;">Test Text</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Header</td>
+<td style="text-align: center;">Title</td>
+<td style="text-align: right;">Here’s this</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Paragraph</td>
+<td style="text-align: center;">Text</td>
+<td style="text-align: right;">And more</td>
+</tr>
+</tbody>
+</table>
