add script to convert versions table to BBCode

--- a/examples/tables/result/readme.html
+++ b/examples/tables/result/readme.html
@@ -74,6 +74,43 @@
 </table>
 <h2 id="other-section">Other Section</h2>
 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, <strong>fringilla vel</strong>, aliquet nec, vulputate eget, arcu.</p>
+<h2 id="versions-table">Versions Table</h2>
+<table>
+<colgroup>
+<col style="width: 9%" />
+<col style="width: 80%" />
+<col style="width: 10%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>Version</th>
+<th>Issues</th>
+<th>Changes</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Future</td>
+<td><a href="https://github.com/slothsoft/nexusmods-build/milestone/4">Issues</a></td>
+<td></td>
+</tr>
+<tr class="even">
+<td>1.0.0</td>
+<td><a href="https://github.com/slothsoft/nexusmods-build/milestone/3?closed=1">Issues</a></td>
+<td>Change 1</td>
+</tr>
+<tr class="odd">
+<td>0.5.0</td>
+<td><a href="https://github.com/slothsoft/nexusmods-build/milestone/2?closed=1">Issues</a></td>
+<td>Change 2</td>
+</tr>
+<tr class="even">
+<td>0.4.0</td>
+<td><a href="https://github.com/slothsoft/nexusmods-build/milestone/1?closed=1">Issues</a></td>
+<td>Change 3</td>
+</tr>
+</tbody>
+</table>
 <h2 id="other-table">Other Table</h2>
 <table>
 <thead>
